# kmer-counting-experimentation

./: CMakeLists.txt  README.md  benchmark.py  bitreversing.py  build.sh  check_correctness.py  check_counter_correctness.py  compile.sh  counter_benchmark.py  counter_eval.py  counters.py  main.py  notes.txt  revcomp.py  reverse_complement.py  run_benchmarks.sh  sanitycheck.txt  setup.py  test.py  test.txt
accounters/: __init__.py  bindings.cpp  counters.py  cpphashtable.h  cu_common.h  cuhashtable.cu  cuhashtable.h  kernels.cu  kernels.h  kernels.py  kmers.cpp  kmers.h  kmers.py  revcomp.cpp  revcomp.h
accounters/accounters.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
accounters/backend/: bindings.cpp  common.h  cpphashtable.cpp  cuhashtable.cu  cuhashtable.h  kernels.cu  kernels.h
bionumpy/: file_buffers.py
latex/: main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.toc
latex/sections/: eval_of_np_vs_cp_in_nps_and_bnp.tex
npstructures/: raggedshape.py
src/: cg_hashtable.cu  cg_hashtable.h  cg_kernels.cu  cg_kernels.h  common.h  cops_hashtable.cu  cops_hashtable.h  cops_kernels.cu  cops_kernels.h  cuhashtable.cu  cuhashtable.h  dnabitset.cpp  dnabitset.h  fasta_parser.cpp  fasta_parser.h  fastaparser.cpp  fastaparser.h  hashtable.cu  hashtable.h  kernels.cu  kernels.h  main.cpp  module.cpp  naive_hashtable.cu  naive_hashtable.h  naive_kernels.cu  naive_kernels.h
tests/: test_kmers.py
